# jarvis

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  drizzle.config.ts  ecosystem.config.cjs  impl.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/: README.md
.claude/agents/: clean-code-refactorer.md  config-drift-detector.md  conversation-insights.md  cost-optimizer.md  (+20 more)
.github/: PULL_REQUEST_TEMPLATE.md
blog/: 2025-12-22-debugging-claude-cli-silent-timeouts.md
config/: alerting-rules.json
deploy/: com.jarvis.telegram.plist  jarvis  jarvis-launcher.sh
docs/: API.md  CONFIGURATION.md  DEFERRED_SERVICES.md  DEPLOYMENT.md  SECURITY_CONFIG.md  TROUBLESHOOTING.md  dead-letter-queue.md  identity-unification-migration.md  platform-memory-architecture.md
examples/: README.md  pii-service-demo.ts
impl/: phase-1-dependencies.md  phase-2-configuration.md  phase-3-claude-client.md  phase-4-browser-service.md  phase-5-factory-wiring.md  phase-6-router-integration.md  phase-7-verification.md  scratchpad.md
scripts/: check-circular-deps.ts  clear-stale-cache.ts  extract-memories.ts  fix-esm-imports.js
services/whisper/: .gitignore  .ruff.toml  README.md  pyproject.toml  requirements.txt  start.sh
services/whisper/src/: config.py  exceptions.py  logging_config.py  main.py  middleware.py  models.py  routes.py  transcriber.py
services/whisper/tests/: conftest.py  test_routes.py  test_transcriber.py
src/: index.ts
tests/: intent-classification.test.ts
(+517 files in other folders)
